# tensorkanren_benchmark

./: README.md  benchmark.sh  dune-project  tkbenchmark.opam
benchmark/: sudoku-typed.rkt
data/: sudoku4-mk-easy.csv  sudoku4-mk-easy.json  sudoku4-mk.csv  sudoku4-mk.json  sudoku4-tk-easy.csv  sudoku4-tk-easy.json  sudoku4-tk.csv  sudoku4-tk.json  sudoku9-medium-mk.json  sudoku9-medium-tk.json  sudoku9-mk.csv  sudoku9-tk-expert.csv  sudoku9-tk-expert.json  sudoku9-tk-hard.csv  sudoku9-tk-hard.json  sudoku9-tk-medium.csv  sudoku9-tk-medium.json  sudoku9-tk.csv
lib/: dune  tensorkanren.ml
mk/: sudoku4-untyped.rkt  sudoku9-untyped.rkt
test/: dune
